Fix subscription callback